2021-08-20  Di Chen  <dichen@redhat.com>

	* debuginfod.cxx (options): Add ARGP_KEY_FORWARDED_TTL_LIMIT.
	(forwarded_ttl_limit): New static unsigned.
	(parse_opt): Handle ARGP_KEY_FORWARDED_TTL_LIMIT.
	(handle_buildid): Check forwarded_ttl_limit.
	(main): Log forwarded ttl limit.

2021-08-20  Saleem Abdulrasool  <abdulras@google.com>

	* debuginfod.cxx: Remove error.h include.

2021-08-19  Frank Ch. Eigler  <fche@redhat.com>

	PR28249
	* debuginfod.cxx (handler_cb): Fix after_you unique_set key
	to the entire incoming URL.

2021-07-26  Noah Sanci  <nsanci@redhat.com>

	PR27982
	* debuginfod-client.c (globals): added default_maxsize and
	default_maxtime.
	(debuginfod_query_server): Added DEBUGINFOD_MAXSIZE and
	DEBUGINFOD_MAXTIME envvar processing.
	* debuginfod.cxx (handler_cb): If the requested file exceeds
	maxsize return code 406.
	* debuginfod.h.in: Added DEBUGINFOD_MAXSIZE_ENV_VAR and
	DEBUGINFOD_MAXTIME_ENV_VAR.

2021-07-16  Noah Sanci  <nsanci@redhat.com>

	PR28034
	* debuginfod-client.c (debuginfod_query_server): % escape filename
	so the completed url is processed properly.

2021-06-28 Noah Sanci <nsanci@redhat.com>

	PR25978
	* debuginfod.cxx (options): Added --fdcache-prefetch-fds/mbs options.
	(set_metric): Added a condition for fdcache_mintmp to ensure no
	negative percentages or percentages larger than 100% are given.
	(globals): Added fdcache_prefetch_mbs/fdcache_prefetch_fds.
	(set_metrics): Differentiate between lru and prefetch metrics.
	(intern): Added prefetch functionality for nuking preexisting copies
	and incrementing prefetch metrics.
	(lookup): Search prefetch cache and increment associated metrics. Upon
	finding in the prefetch cache move the element to the lru cache.
	(limit): Arguments updated. Update size of prefetch cache.
	(main): Log prefetch and cache fds/mbs

2021-07-06  Alice Zhang  <alizhang@redhat.com>

	PR27531
	* debuginfod-client.c (debuginfod_query_server): Retry failed queries
	if error code is not ENOENT.