@@ -1,3 +1,8 @@
+2021-08-28  Mark Wielaard  <mjw@redhat.com>
+
+	* debuginfod.cxx (parse_opt): Turn the -d arg ":memory:" into
+	"file::memory:?cache=shared" for the db_path.
+
 2021-08-20  Di Chen  <dichen@redhat.com>
 
 	* debuginfod.cxx (options): Add ARGP_KEY_FORWARDED_TTL_LIMIT.
